force-app/main/default/objects/Sales_Lead__c/Sales_Lead__c.object-meta.xml
<CustomObject>
    <description>CS21-3390</description>
    <label>Sales Lead</label>
    <nameField>
        <displayFormat>SL-{00000}</displayFormat>
        <label>Sales Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>