force-app/main/default/objects/Sales_Lead__c/fields/Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select or confirm the account executive</inlineHelpText>
    <label>Account Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>