force-app/main/default/objects/Sales_Lead__c/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF(

  ISBLANK( Case__r.Owner:User.Id),  

  Case__r.Owner:Queue.QueueName,
 

  Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName
 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>