force-app/main/default/objects/Sales_Lead__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the primary Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>