force-app/main/default/objects/Sales_Lead__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <inlineHelpText>Enter the primary contact&apos;s phone number.</inlineHelpText>
    <label>Contact Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>