force-app/main/default/objects/Sales_Lead__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Enter the country associated with this account.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>