force-app/main/default/objects/Sales_Lead__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter any entitlement information, if applicable (Existing License).</inlineHelpText>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Sales Leads</relationshipLabel>
    <relationshipName>Sales_Leads_Entitlements</relationshipName>
    <type>Lookup</type>
</CustomField>