force-app/main/default/objects/Sales_Lead__c/fields/Product_Features__c.field-meta.xml
<CustomField>
    <fullName>Product_Features__c</fullName>
    <inlineHelpText>Select the respective product(s)</inlineHelpText>
    <label>Product(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3RD PARTY HARDWARE</fullName>
            </value>
            <value>
                <fullName>4 HR ONST</fullName>
            </value>
            <value>
                <fullName>6304S</fullName>
            </value>
            <value>
                <fullName>6304SE</fullName>
            </value>
            <value>
                <fullName>6404S</fullName>
            </value>
            <value>
                <fullName>ACTIVE DIRECTORY</fullName>
            </value>
            <value>
                <fullName>ACTIVE DIRECTORY CYBER POSTURE</fullName>
            </value>
            <value>
                <fullName>ACTIVE DIRECTORY CYBER RECOVERY</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>ANNAPURNA</fullName>
            </value>
            <value>
                <fullName>A NODE</fullName>
            </value>
            <value>
                <fullName>ANOMALY DETECTION CLOUD UNSTRUCTURED</fullName>
            </value>
            <value>
                <fullName>ANOMALY DETECTION CUSTOMER HOSTED UCL</fullName>
            </value>
            <value>
                <fullName>APPFLOWS</fullName>
            </value>
            <value>
                <fullName>APPFLOWS UCL</fullName>
            </value>
            <value>
                <fullName>ASE</fullName>
            </value>
            <value>
                <fullName>ATLASSIAN</fullName>
            </value>
            <value>
                <fullName>BACKRIGHTUP</fullName>
            </value>
            <value>
                <fullName>BASET</fullName>
            </value>
            <value>
                <fullName>BASIC HW SUPPORT</fullName>
            </value>
            <value>
                <fullName>BASIC HW SUPPORT _S2</fullName>
            </value>
            <value>
                <fullName>BASIC SUPPORT</fullName>
            </value>
            <value>
                <fullName>B NODE</fullName>
            </value>
            <value>
                <fullName>CBL</fullName>
            </value>
            <value>
                <fullName>CDP</fullName>
            </value>
            <value>
                <fullName>CEM</fullName>
            </value>
            <value>
                <fullName>CHASSIS</fullName>
            </value>
            <value>
                <fullName>CLOUD CLUSTER</fullName>
            </value>
            <value>
                <fullName>CLOUD CLUSTER ES</fullName>
            </value>
            <value>
                <fullName>CLOUD EDITION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>