force-app/main/default/objects/Sales_Lead__c/fields/Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select or confirm the sales engineer.</inlineHelpText>
    <label>Sales Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>