force-app/main/default/objects/Sales_Lead__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Enter the state associated with this account.</inlineHelpText>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>