force-app/main/default/objects/Sales_Lead__c/fields/Summary_and_Customer_Sale_Ask__c.field-meta.xml
<CustomField>
    <fullName>Summary_and_Customer_Sale_Ask__c</fullName>
    <inlineHelpText>Provide a summary and detail the customer&apos;s or sales ask. (Analysis)</inlineHelpText>
    <label>Summary and Customer/Sale Ask</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>