force-app/main/default/objects/Sales_Lead__c/fields/Type_of_Product__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Product__c</fullName>
    <inlineHelpText>Select as per the existing or new product entitlement.</inlineHelpText>
    <label>Type of Product</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Existing Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>